--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "fast-csv": "^4.3.1",
+    "slugify": "^1.6.5",
     "storyblok-js-client": "^2.5.1"
   }
 }
